HTML de la cabecera

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,7 @@
 {
     "cSpell.words": [
+        "cabecera",
+        "Inicio",
         "Maquetacion",
         "Maquetación",
         "Proyecto"
